--- a/index.html
+++ b/index.html
@@ -5,8 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Grayscale - Start Bootstrap Theme</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <title>Camille Bourque - Planificatrice inancière</title>
+        <link rel="icon" type="image/x-icon" href="assets/favicon.png" />
+        <!-- Bootstrap Icons -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+        <!-- jQuery -->
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -19,182 +23,159 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="#page-top"><img src="assets/img/signature.png" width="200" alt=""></a>
+                <a class="navbar-brand" href="#page-top"><img src="assets/img/signature.png" alt="" width="140"></a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#about">Accueil</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#projects">À propos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#services">Services</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#signup">Vlog</a></li>
                         <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
+        <header class="masthead" id="about">
             <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-center">
                 <div class="d-flex justify-content-center">
                     <div class="text-center">
-                        <h1 class="mx-auto my-0 text-uppercase">Camille Bourque</h1>
-                        <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-                        <a class="btn btn-primary" href="#about">Get Started</a>
+                        <h1 class="mx-auto my-1 text-primary">Planificatrice financière</h1>
+                        <a class="btn btn-primary mt-5 px-lg-5 mb-5 rounded-pill" href=""><i class="fas fa-play"></i></a>
+                        <div class="social d-flex justify-content-center">
+                            <a class="mx-3 display-6" href="#!"><i class="fab fa-twitter"></i></a>
+                            <a class="mx-3 display-6" href="#!"><i class="fab fa-facebook-f"></i></a>
+                            <a class="mx-3 display-6" href="#!"><i class="fab fa-linkedin"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
         </header>
-        <!-- About--> <!--
+
+        <!-- Black Spacing -->
         <section class="about-section text-center" id="about">
             <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-lg-8">
-                        <h2 class="text-white mb-4">Built with Bootstrap 5</h2>
-                        <p class="text-white-50">
-                            Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
-                            <a href="https://startbootstrap.com/theme/grayscale/">the preview page.</a>
-                            The theme is open source, and you can use it for any purpose, personal or commercial.
-                        </p>
-                    </div>
-                </div>
-                <img class="img-fluid" src="assets/img/ipad.png" alt="..." />
             </div>
-        </section> -->
+        </section> 
 
-        <!-- Projects-->
+        <!-- About -->
         <section class="projects-section bg-light" id="projects">
             <div class="container px-4 px-lg-5">
-                <!-- Featured Project Row-->
                 <div class="row gx-0 mb-4 mb-lg-5 align-items-center">
-                    <div class="col-xl-8 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/bg-masthead.jpg" alt="..." /></div>
+                    <div class="col-xl-7 col-lg-7"><img class="img-fluid mb-3 mb-lg-0" src="assets/img/ipad.jpg" alt="..."/></div>
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
-                            <h4>Shoreline</h4>
-                            <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project One Row-->
-                <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-01.jpg" alt="..." /></div>
-                    <div class="col-lg-6">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Misty</h4>
-                                    <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
-                                    <hr class="d-none d-lg-block mb-0 ms-0" />
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- Project Two Row-->
-                <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="assets/img/demo-image-02.jpg" alt="..." /></div>
-                    <div class="col-lg-6 order-lg-first">
-                        <div class="bg-black text-center h-100 project">
-                            <div class="d-flex h-100">
-                                <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Mountains</h4>
-                                    <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
-                                    <hr class="d-none d-lg-block mb-0 me-0" />
-                                </div>
-                            </div>
+                            <h4 class="fs-1 mb-lg-2 fw-bold">À propos de moi</h4>
+                            <img class="image-fluid w-50 mt-0" src="assets/img/head-line.png">
+                            <p class="text-black-75 mb-0 fs-5 mt-2">Mon rôle est de vous aider à faire les meilleurs choix selon votre situation et vos besoins financiers, et de vous accompagner à chacune des étapes importantes de votre vie, pour que vous puissiez prendre les bonnes décisions au moment opportun.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
-        <!-- Signup-->
-        <section class="signup-section" id="signup">
+
+        <section class="about-section text-center" id="about">
             <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-md-10 col-lg-8 mx-auto text-center">
-                        <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-                        <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- * * SB Forms Contact Form * *-->
-                        <!-- * * * * * * * * * * * * * * *-->
-                        <!-- This form is pre-integrated with SB Forms.-->
-                        <!-- To make this form functional, sign up at-->
-                        <!-- https://startbootstrap.com/solution/contact-forms-->
-                        <!-- to get an API token!-->
-                        <form class="form-signup" id="contactForm" data-sb-form-api-token="API_TOKEN">
-                            <!-- Email address input-->
-                            <div class="row input-group-newsletter">
-                                <div class="col"><input class="form-control" id="emailAddress" type="email" placeholder="Enter email address..." aria-label="Enter email address..." data-sb-validations="required,email" /></div>
-                                <div class="col-auto"><button class="btn btn-primary disabled" id="submitButton" type="submit">Notify Me!</button></div>
-                            </div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:required">An email is required.</div>
-                            <div class="invalid-feedback mt-2" data-sb-feedback="emailAddress:email">Email is not valid.</div>
-                            <!-- Submit success message-->
-                            <!---->
-                            <!-- This is what your users will see when the form-->
-                            <!-- has successfully submitted-->
-                            <div class="d-none" id="submitSuccessMessage">
-                                <div class="text-center mb-3 mt-2 text-white">
-                                    <div class="fw-bolder">Form submission successful!</div>
-                                    To activate this form, sign up at
-                                    <br />
-                                    <a href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
-                                </div>
-                            </div>
-                            <!-- Submit error message-->
-                            <!---->
-                            <!-- This is what your users will see when there is-->
-                            <!-- an error submitting the form-->
-                            <div class="d-none" id="submitErrorMessage"><div class="text-center text-danger mb-3 mt-2">Error sending message!</div></div>
-                        </form>
-                    </div>
-                </div>
             </div>
-        </section>
-        <!-- Contact-->
-        <section class="contact-section bg-black">
-            <div class="container px-4 px-lg-5">
-                <div class="row gx-4 gx-lg-5">
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
-                                <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Address</h4>
-                                <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
-                            </div>
-                        </div>
+        </section> 
+
+        <!-- Services Section -->
+
+        <section class="p-5" id="services">
+            <div class="container text-center">
+                <h1 class="fs-1 mb-lg-2 fw-bold">Mes Services</h1>
+                <img class="img-fluid w-25 mb-2" src="assets/img/head-line.png">
+              <div class="row text-center g-4 mt-0">
+                <div class="col-md">
+                  <div class="card bg-dark text-light">
+                    <div class="card-body text-center">
+                      <div class="h1 mb-3">
+                        <i class="bi bi-house-fill"></i>
+                      </div>
+                      <h3 class="card-title mb-3">
+                        Achat d'une maison
+                      </h3>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, ad. Optio placeat unde vitae officiis!
+                      </p>
+                      <a class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill" href="">En savoir plus</a>
                     </div>
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
-                                <i class="fas fa-envelope text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Email</h4>
-                                <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50"><a href="#!">hello@yourdomain.com</a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 mb-3 mb-md-0">
-                        <div class="card py-4 h-100">
-                            <div class="card-body text-center">
-                                <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                                <h4 class="text-uppercase m-0">Phone</h4>
-                                <hr class="my-4 mx-auto" />
-                                <div class="small text-black-50">+1 (555) 902-8832</div>
-                            </div>
-                        </div>
-                    </div>
+                  </div>
                 </div>
-                <div class="social d-flex justify-content-center">
-                    <a class="mx-2" href="#!"><i class="fab fa-twitter"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    <a class="mx-2" href="#!"><i class="fab fa-github"></i></a>
+                <div class="col-md">
+                  <div class="card bg-dark text-light">
+                    <div class="card-body text-center">
+                      <div class="h1 mb-3">
+                      <i class="bi bi-building"></i>
+                      </div>
+                      <h3 class="card-title mb-3">
+                        Protection d'entreprise
+                      </h3>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, ad. Optio placeat unde vitae officiis!
+                      </p>
+                      <a href="#" class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill">En savoir plus</a>
+                    </div>
+                  </div>
                 </div>
+                <div class="col-md">
+                  <div class="card bg-dark text-light">
+                    <div class="card-body text-center">
+                      <div class="h1 mb-3">
+                      <i class="bi bi-people"></i>
+                      </div>
+                      <h3 class="card-title mb-3">
+                        Protection de votre famille
+                      </h3>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, ad. Optio placeat unde vitae officiis!
+                      </p>
+                      <a href="#" class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill">En savoir plus</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md">
+                  <div class="card bg-dark text-light">
+                    <div class="card-body text-center">
+                      <div class="h1 mb-3">
+                      <i class="bi bi-bar-chart"></i>
+                      </div>
+                      <h3 class="card-title mb-3">
+                        Placements et votre retraite
+                      </h3>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, ad. Optio placeat unde vitae officiis!
+                      </p>
+                      <a href="#" class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill">En savoir plus</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md">
+                  <div class="card bg-dark text-light">
+                    <div class="card-body text-center">
+                      <div class="h1 mb-3">
+                      <i class="bi bi-cash"></i>
+                      </div>
+                      <h3 class="card-title mb-3">
+                        Vos solutions financière
+                      </h3>
+                      <p class="card-text">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, ad. Optio placeat unde vitae officiis!
+                      </p>
+                      <a href="#" class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill">En savoir plus</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-        </section>
+          </section>
+
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5">Copyright &copy; Your Website 2021</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5 fs-4">Copyright &copy; Your Website 2021</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
