--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                           </div>
                           <div class="intro-video-container">
                             <span class="video-intro-close">&#10006;</span>
-                            <video src="assets/demo.mp4" controls></video>
+                            <video src="assets/demo.mp4" controls autoplay></video>
                           </div>
                         <div class="social d-flex justify-content-center">
                             <a class="mx-3 display-6" href="#!"><i class="fab fa-twitter"></i></a>
@@ -98,8 +98,8 @@
 
         <!-- Services Section -->
 
-        <section class="p-5" id="services">
-            <div class="container text-center">
+        <section class="p-5 bg-light" id="services">
+            <div class="container text-center" id="blur">
                 <h1 class="fs-1 mb-lg-2 fw-bold">Mes Services</h1>
                 <img class="img-fluid w-25 mb-2" src="assets/img/head-line.png">
               <div class="row text-center g-4 mt-0">
@@ -115,8 +115,9 @@
                       <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, ad. Optio placeat unde vitae officiis!
                       </p>
-                      <a class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill" href="">En savoir plus</a>
+                      <a class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill" href="#services">En savoir plus</a>
                     </div>
+
                   </div>
                 </div>
                 <div class="col-md">
@@ -131,7 +132,7 @@
                       <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, ad. Optio placeat unde vitae officiis!
                       </p>
-                      <a href="#" class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill">En savoir plus</a>
+                      <a class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill" href="#services">En savoir plus</a>
                     </div>
                   </div>
                 </div>
@@ -147,7 +148,7 @@
                       <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, ad. Optio placeat unde vitae officiis!
                       </p>
-                      <a href="#" class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill">En savoir plus</a>
+                      <a class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill" href="#services">En savoir plus</a>
                     </div>
                   </div>
                 </div>
@@ -163,7 +164,7 @@
                       <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, ad. Optio placeat unde vitae officiis!
                       </p>
-                      <a href="#" class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill">En savoir plus</a>
+                      <a class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill" href="#services">En savoir plus</a>
                     </div>
                   </div>
                 </div>
@@ -179,7 +180,7 @@
                       <p class="card-text">
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Omnis, ad. Optio placeat unde vitae officiis!
                       </p>
-                      <a href="#" class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill">En savoir plus</a>
+                      <a class="btn btn-primary mt-0 px-lg-3 mb-0 rounded-pill" href="#services">En savoir plus</a>
                     </div>
                   </div>
                 </div>
@@ -286,7 +287,7 @@
             
 
         <!-- Footer-->
-        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5 fs-4">Copyright &copy; Your Website 2021</div></footer>
+        <footer class="footer bg-black small text-center text-white-50"><div class="container px-4 px-lg-5 fs-4">Tout droit réservé &copy; Camille Bourque 2022</div></footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
